--- a/MACDNotification/AndroidManifest.xml
+++ b/MACDNotification/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.sleepyduck.macdnotification.ActivityMACD"
+            android:name=".ActivityMACD"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,7 +26,7 @@
         </activity>
 
         <receiver
-            android:name="com.sleepyduck.macdnotification.StartupBroadcastReceiver"
+            android:name=".StartupBroadcastReceiver"
             android:enabled="true"
             android:permission="android.permission.RECEIVE_BOOT_COMPLETED" >
             <intent-filter>
