--- a/MACDNotification/AndroidManifest.xml
+++ b/MACDNotification/AndroidManifest.xml
@@ -15,6 +15,7 @@
     <uses-permission android:name="android.permission.SEND_SMS"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
             android:allowBackup="true"
@@ -31,9 +32,7 @@
         </activity>
 
         <receiver
-                android:name=".StartupBroadcastReceiver"
-                android:enabled="true"
-                android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
+                android:name=".StartupBroadcastReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
